<resources>
    <string name="app_name">桶装水追溯系统</string>

    <!-- title for fragments -->
    <string name="r0_title">桶注册</string>
    <string name="r1_title">桶报废</string>
    <string name="r2_title">空桶回流</string>
    <string name="r2_monitor_title">回流监控</string>
    <string name="r3_title">桶筛选</string>
    <string name="r4_title">成品下线</string>
    <string name="r5_title">成品打垛</string>
    <string name="r6_title">成品出库</string>
    <string name="r6_monitor_title">出库监控</string>
    <string name="r7_title">桶上线</string>
    <string name="rn_title">经销商库存管理</string>
    <string name="card_title">专用卡注册</string>
    <string name="config_title">配置管理</string>

    <!-- common string for all fragments -->
    <string name="monitor_status_label">监控APP状态</string>
    <string name="reader_status_label">读写器状态</string>
    <string name="network_status_label">互联网状态</string>
    <string name="platform_status_label">平台状态</string>
    <string name="action_save">保存</string>
    <string name="action_cancel">取消</string>

    <string name="number_default_value">0</string>
    <string name="datetime_default_value">01-01 01:01:01</string>
    <string name="time_default_value">01:01</string>

    <!-- string for r0 fragment -->
    <string name="r0_card_title">配置信息</string>
    <string name="bucket_spec_label">桶规格：</string>
    <string name="bucket_type_label">桶类型：</string>
    <string name="water_brand_label">水品牌：</string>
    <string name="water_spec_label">水规格：</string>
    <string name="bucket_producer_label">桶生产方：</string>
    <string name="bucket_owner_label">桶所有方：</string>
    <string name="bucket_user_label">桶使用方：</string>
    <string name="dealer_label">经销商：</string>
    <string name="driver_label">司机：</string>
    <string name="epc_label">EPC：</string>
    <string name="rssi_label">RSSI：</string>
    <string name="registered_count_label">已注册数量：</string>
    <string name="body_code_label">桶身码：</string>
    <string name="register_button_text">注册</string>
    <string name="scrap_button_text">报废</string>
    <string name="scanning_status_label">扫描状态：</string>
    <string name="delivery_count_label">总出库</string>
    <string name="reflux_count_label">总回收</string>
    <string name="total_count_label">总数量</string>
    <string name="uploaded_bill_count_label">已上传单数</string>
    <string name="stored_bill_count_label">已转储单数</string>
    <string name="work_status_label">工作状态</string>
    <string name="scanned_count_label">扫描数量</string>
    <string name="delivery_card_id">当前出库</string>
    <string name="cur_delivery_count_label">出库数量</string>
    <string name="reflux_card_id">当前回收</string>
    <string name="cur_reflux_count_label">回收数量</string>

    <string name="card_id_label">专用卡号：</string>
    <string name="delivery_bill_id_label">提货单:</string>
    <string name="view_buckets_button_text">桶详细信息</string>
    <string name="view_brief_button_text">简要信息</string>
    <string name="confirm_delivery_button_text">确认出库</string>
    <string name="delete_delivery_button_text">取消出库单</string>
    <string name="confirm_reflux_button_text">确认回收</string>
    <string name="delete_reflux_button_text">取消回收单</string>
    <string name="close_button_text">关闭</string>
    <string name="back_button_text">返回</string>
    <string name="clear_button_text">清空数据</string>
    <string name="body_code_default_value">AHY12345</string>
    <string name="product_name_default_value">16.5L云峰天然饮用水</string>
    <string name="config_link_label">工位</string>
    <string name="config_use_switch_label">USB连接</string>
    <string name="config_tag_lifecycle_label">标签生命周期</string>
    <string name="config_blank_interval_label">空白期间隔</string>
    <string name="config_discovery_interval_label">最小时间间隔</string>
    <string name="config_sensor_switch_label">传感器开关</string>
    <string name="config_rssi_threshold_label">RSSI阈值</string>
    <string name="config_min_reach_times_label">最少达标次数</string>
    <string name="config_reader_power_label">读写器发射功率</string>
    <string name="config_reader_q_value_label">读写器Q值</string>
    <string name="config_reader_send_interval_label">读写器发送间隔</string>
    <string name="config_main_platform_addr_label">主平台地址</string>
    <string name="config_monitor_app_addr_label">监控APP地址</string>
    <string name="config_line_name_label">处理线名称</string>
    <string name="config_reader_id_label">读写器ID</string>
    <string name="config_longitude_label">经度</string>
    <string name="config_latitude_label">纬度</string>
    <string name="config_height_label">高度</string>
    <string name="config_reader_mac_label">读写器蓝牙MAC地址</string>
    <string name="config_reader_list_label">可用蓝牙设备列表</string>
    <string name="save_config_button_text">保存</string>
    <string name="clear_cache_button_text">清除缓存</string>
    <string name="exit_button_text">退出系统</string>
    <string name="resume_button_text">返回</string>
    <string name="process_scanned_count_label">已扫描</string>
    <string name="process_uploaded_count_label">已上传</string>
    <string name="process_stored_count_label">已转储</string>

</resources>
