<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_reflux_bill_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/snow">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="@dimen/item_reflux_bill_margin"
        android:padding="@dimen/item_reflux_bill_padding">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:theme="@style/AppTheme.BillText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_id_label" />

            <TextView
                android:id="@+id/tv_reflux_bill_card_id"
                android:theme="@style/AppTheme.BillText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bill_card_normal"
                android:text="HY1001" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />

            <TextView
                android:theme="@style/AppTheme.BillText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reflux_count_label" />

            <TextView
                android:id="@+id/tv_reflux_count"
                android:theme="@style/AppTheme.BigNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/r2_margin"
                android:gravity="end"
                android:text="@string/number_default_value" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>