<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_connection_status"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/ll_reader_status"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_reader_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_connection_abnormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reader_status_label"
                android:textSize="14sp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_network_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_connection_abnormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/network_status_label"
                android:textSize="14sp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_platform_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_connection_abnormal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/platform_status_label"
                android:textSize="14sp"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginEnd="4dp"
        android:clickable="true"
        android:focusable="true">

        <Button
            android:id="@+id/btn_backdoor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <TextView
                android:id="@+id/tv_time_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.CommonText"
                android:textStyle="bold"
                android:text="12" />

            <TextView
                android:id="@+id/tv_time_colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:theme="@style/AppTheme.CommonText"
                android:textStyle="bold"
                android:text=":" />

            <TextView
                android:id="@+id/tv_time_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.CommonText"
                android:textStyle="bold"
                android:text="12" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>